--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
     "lucide-react": "^0.284.0",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
