--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.284.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "sass": "^1.68.0",
+    "save-svg-as-png": "^1.4.17",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
