--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.10.7",
     "@testing-library/user-event": "^14.5.1",
+    "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
@@ -42,9 +43,12 @@
     "react-icons": "^4.11.0",
     "sass": "^1.68.0",
     "save-svg-as-png": "^1.4.17",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
+    "utf-8-validate": "^5.0.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
