--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.7",
     "@testing-library/user-event": "^14.5.1",
     "bufferutil": "^4.0.8",
@@ -35,6 +36,7 @@
     "moment": "^2.29.4",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
+    "next-translate": "^2.6.1",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-day-picker": "^8.9.1",
