--- a/package.json
+++ b/package.json
@@ -32,17 +32,22 @@
     "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
     "html-to-image": "^1.11.11",
+    "i18next": "^23.6.0",
     "lucide-react": "^0.284.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
+    "next-i18next": "^14.0.3",
     "next-themes": "^0.2.1",
     "next-translate": "^2.6.1",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-code-blocks": "^0.1.4",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.68.0",
     "save-svg-as-png": "^1.4.17",
     "socket.io": "^4.7.2",
@@ -61,11 +66,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-translate-plugin": "^2.6.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
