--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
+    "react-speech-kit": "^3.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.68.0",
     "save-svg-as-png": "^1.4.17",
