--- a/package.json
+++ b/package.json
@@ -33,49 +33,49 @@
     "echarts": "^5.4.3",
     "html-to-image": "^1.11.11",
     "i18next": "^23.6.0",
-    "lucide-react": "^0.284.0",
+    "lucide-react": "0.292.0",
     "moment": "^2.29.4",
-    "next": "13.5.4",
-    "next-i18next": "^14.0.3",
+    "next": "14.0.1",
+    "next-i18next": "15.0.0",
     "next-themes": "^0.2.1",
-    "next-translate": "^2.6.1",
+    "next-translate": "2.6.2",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-code-blocks": "^0.1.4",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "7.48.2",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
     "react-speech-kit": "^3.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "sass": "^1.68.0",
+    "sass": "1.69.5",
     "save-svg-as-png": "^1.4.17",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
-    "utf-8-validate": "^5.0.10",
+    "utf-8-validate": "6.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "@types/crypto-js": "^4.1.3",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-syntax-highlighter": "^15.5.9",
+    "@types/crypto-js": "4.2.1",
+    "@types/jest": "29.5.8",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@types/react-syntax-highlighter": "15.5.10",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "next-translate-plugin": "^2.6.1",
+    "next-translate-plugin": "2.6.2",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "3.3.5",
     "typescript": "^5"
   }
 }
