--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-table": "^8.10.7",
     "@testing-library/user-event": "^14.5.1",
     "bufferutil": "^4.0.8",
