--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,6 +29,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-table": "^8.10.7",
     "@testing-library/user-event": "^14.5.1",
+    "@types/mdx": "^2.0.10",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -38,6 +42,7 @@
     "moment": "^2.29.4",
     "next": "14.0.1",
     "next-i18next": "15.0.0",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "next-translate": "2.6.2",
     "qrcode.react": "^3.1.0",
