--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.2",
     "@hookform/resolvers": "^3.3.2",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
@@ -40,6 +41,7 @@
     "i18next": "^23.6.0",
     "lucide-react": "0.292.0",
     "moment": "^2.29.4",
+    "negotiator": "^0.6.3",
     "next": "14.0.1",
     "next-i18next": "15.0.0",
     "next-mdx-remote": "^4.4.1",
@@ -70,6 +72,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/crypto-js": "4.2.1",
     "@types/jest": "29.5.8",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
