--- a/package.json
+++ b/package.json
@@ -42,18 +42,18 @@
     "lucide-react": "0.292.0",
     "moment": "^2.29.4",
     "negotiator": "^0.6.3",
-    "next": "14.0.1",
-    "next-i18next": "15.0.0",
+    "next": "14.1.4",
+    "next-i18next": "15.2.0",
     "next-mdx-remote": "^4.4.1",
-    "next-themes": "^0.2.1",
+    "next-themes": "0.3.0",
     "next-translate": "2.6.2",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-code-blocks": "^0.1.4",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
-    "react-hook-form": "7.48.2",
-    "react-i18next": "^13.3.1",
+    "react-hook-form": "7.51.2",
+    "react-i18next": "14.1.0",
     "react-icons": "^4.11.0",
     "react-speech-kit": "^3.0.1",
     "react-syntax-highlighter": "^15.5.0",
