--- a/package.json
+++ b/package.json
@@ -36,17 +36,18 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.11",
     "echarts": "^5.4.3",
     "html-to-image": "^1.11.11",
     "i18next": "^23.6.0",
     "lucide-react": "0.292.0",
     "moment": "^2.29.4",
     "negotiator": "^0.6.3",
-    "next": "14.1.4",
-    "next-i18next": "15.2.0",
+    "next": "^14.1.4",
+    "next-i18next": "^15.2.0",
     "next-mdx-remote": "^4.4.1",
-    "next-themes": "0.3.0",
-    "next-translate": "2.6.2",
+    "next-themes": "^0.3.0",
+    "next-translate": "^2.6.2",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-code-blocks": "^0.1.4",
