--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
     "utf-8-validate": "6.0.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
