--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "7.51.2",
     "react-i18next": "14.1.0",
     "react-icons": "^4.11.0",
+    "react-resizable-panels": "^2.0.19",
     "react-speech-kit": "^3.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "1.69.5",
